--- a/notebooks/get_train_labels.ipynb
+++ b/notebooks/get_train_labels.ipynb
@@ -2,30 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io\n",
     "from pathlib import Path\n",
     "from typing import Optional\n",
-    "DATA_PATH = Path('..', 'data_dir')\n",
-    "MAX_PATH = DATA_PATH\n",
+    "DATA_PATH = Path('/cluster/scratch/thobauma/data')\n",
     "LOG_PATH = Path(DATA_PATH, 'logs')\n",
-    "\n",
-    "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
-    "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
-    "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
     "\n",
     "ORI_PATH = Path(DATA_PATH, 'ori')\n",
     "\n",
-    "ORI_LABEL_PATH = Path(ORI_PATH,'labels.csv')\n",
-    "ORI_IMAGES_PATH = Path(ORI_PATH,'train','images')"
+    "ORI_LABEL_PATH = Path(ORI_PATH,'/validation/labels.csv')\n",
+    "ORI_IMAGES_PATH = Path(ORI_PATH,'validation','images')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx_to_wnid, wnid_to_classes = parse_meta_mat(Path(ORI_PATH, 'info'))"
+    "idx_to_wnid, wnid_to_classes = parse_meta_mat(Path(ORI_PATH/'ILSVRC2012_devkit_t12/'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,11 +188,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "tt = tt.drop(columns=['wnid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>files</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ILSVRC2012_val_00021341.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ILSVRC2012_val_00005377.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ILSVRC2012_val_00046054.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ILSVRC2012_val_00021859.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ILSVRC2012_val_00005613.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>ILSVRC2012_val_00041808.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>ILSVRC2012_val_00004606.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>ILSVRC2012_val_00011187.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>ILSVRC2012_val_00047591.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>ILSVRC2012_val_00018479.JPEG</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              files  label\n",
+       "0      ILSVRC2012_val_00021341.JPEG    NaN\n",
+       "1      ILSVRC2012_val_00005377.JPEG    NaN\n",
+       "2      ILSVRC2012_val_00046054.JPEG    NaN\n",
+       "3      ILSVRC2012_val_00021859.JPEG    NaN\n",
+       "4      ILSVRC2012_val_00005613.JPEG    NaN\n",
+       "...                             ...    ...\n",
+       "49995  ILSVRC2012_val_00041808.JPEG    NaN\n",
+       "49996  ILSVRC2012_val_00004606.JPEG    NaN\n",
+       "49997  ILSVRC2012_val_00011187.JPEG    NaN\n",
+       "49998  ILSVRC2012_val_00047591.JPEG    NaN\n",
+       "49999  ILSVRC2012_val_00018479.JPEG    NaN\n",
+       "\n",
+       "[50000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tt"
    ]
   },
   {
