--- a/notebooks/Adversarial Transfer Analysis.ipynb
+++ b/notebooks/Adversarial Transfer Analysis.ipynb
@@ -670,7 +670,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 85%|████████▌ | 51/60 [01:02<00:11,  1.25s/it]"
+      "100%|██████████| 60/60 [01:13<00:00,  1.22s/it]\n",
+      "  0%|          | 0/60 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------\n",
+      "resnet PGD(model_name=CustomResNet, device=cuda:0, eps=0.03, alpha=0.02, steps=3, random_start=True, attack_mode=default, return_type=float)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60/60 [01:05<00:00,  1.08s/it]\n",
+      "  0%|          | 0/300 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded pretrained weights.\n",
+      "----------------------------------------------------------------------\n",
+      "sup_vit PGD(model_name=CustomViT, device=cuda:0, eps=0.03, alpha=0.02, steps=3, random_start=True, attack_mode=default, return_type=float)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 27%|██▋       | 82/300 [01:53<04:59,  1.37s/it]"
      ]
     }
    ],
