--- a/notebooks/AdversarialBenchmark.ipynb
+++ b/notebooks/AdversarialBenchmark.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,13 +339,13 @@
     "    PGD(x.cuda(), eps=0.001, alpha=(0.001*2)/3, steps=3),\n",
     "    PGD(x.cuda(), eps=0.03, alpha=(0.03*2)/3, steps=3),\n",
     "    PGD(x.cuda(), eps=0.1, alpha=(0.1*2)/3, steps=3),\n",
-    "    CW(x.cuda(), c=50),\n",
+    "    CW(x.cuda(), c=50, steps=10),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,122 +411,14 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------\n",
-      "FGSM(model_name=ViTWrapper, device=cuda:0, eps=0.001, attack_mode=default, return_type=float)\n"
+      "CW(model_name=ViTWrapper, device=cuda:0, c=50, kappa=0, steps=10, lr=0.01, attack_mode=default, return_type=float)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:55<00:00,  1.09it/s]\n",
-      "  0%|          | 0/60 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total elapsed time (sec): 55.14\n",
-      "Accuracy against attack: 52.03 %\n",
-      "----------------------------------------------------------------------\n",
-      "FGSM(model_name=ViTWrapper, device=cuda:0, eps=0.03, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 60/60 [00:51<00:00,  1.17it/s]\n",
-      "  0%|          | 0/60 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total elapsed time (sec): 51.38\n",
-      "Accuracy against attack: 1.30 %\n",
-      "----------------------------------------------------------------------\n",
-      "FGSM(model_name=ViTWrapper, device=cuda:0, eps=0.1, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 60/60 [00:50<00:00,  1.18it/s]\n",
-      "  0%|          | 0/60 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total elapsed time (sec): 50.98\n",
-      "Accuracy against attack: 1.13 %\n",
-      "----------------------------------------------------------------------\n",
-      "PGD(model_name=ViTWrapper, device=cuda:0, eps=0.001, alpha=0.0006666666666666666, steps=3, random_start=True, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 60/60 [01:20<00:00,  1.34s/it]\n",
-      "  0%|          | 0/60 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total elapsed time (sec): 80.33\n",
-      "Accuracy against attack: 49.13 %\n",
-      "----------------------------------------------------------------------\n",
-      "PGD(model_name=ViTWrapper, device=cuda:0, eps=0.03, alpha=0.02, steps=3, random_start=True, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 60/60 [01:19<00:00,  1.33s/it]\n",
-      "  0%|          | 0/60 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total elapsed time (sec): 79.78\n",
-      "Accuracy against attack: 0.00 %\n",
-      "----------------------------------------------------------------------\n",
-      "PGD(model_name=ViTWrapper, device=cuda:0, eps=0.1, alpha=0.06666666666666667, steps=3, random_start=True, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 60/60 [01:18<00:00,  1.32s/it]\n",
-      "  0%|          | 0/60 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total elapsed time (sec): 78.98\n",
-      "Accuracy against attack: 0.00 %\n",
-      "----------------------------------------------------------------------\n",
-      "CW(model_name=ViTWrapper, device=cuda:0, c=50, kappa=0, steps=1000, lr=0.01, attack_mode=default, return_type=float)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 42%|████▏     | 25/60 [19:12<26:29, 45.40s/it]"
+      " 28%|██▊       | 17/60 [00:37<01:39,  2.33s/it]"
      ]
     }
    ],
